[gd_scene load_steps=2 format=3 uid="uid://608jwilok83m"]

[ext_resource type="Script" uid="uid://cel6ar8kdj2wl" path="res://resource_ui.gd" id="1_g6sl6"]

[node name="ResourceUI" type="MarginContainer"]
anchors_preset = -1
anchor_left = 0.028
anchor_top = 0.055
anchor_right = 0.977
anchor_bottom = 0.951
offset_left = -19.256
offset_top = -23.64
offset_right = 14.496
offset_bottom = -578.248
scale = Vector2(1, 1.00707)
mouse_filter = 2
script = ExtResource("1_g6sl6")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="KilowattLabel" type="RichTextLabel" parent="HBoxContainer"]
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "kW:"
fit_content = true
autowrap_mode = 0

[node name="KilowattsConsumed" type="RichTextLabel" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
text = "0.0"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Slash" type="RichTextLabel" parent="HBoxContainer"]
layout_mode = 2
mouse_filter = 2
text = "/"
fit_content = true
autowrap_mode = 0

[node name="KilowattsProduced" type="RichTextLabel" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
text = "0.0"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="RegolithLabel" type="RichTextLabel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_stretch_ratio = 0.25
mouse_filter = 2
text = "Regolith:"
fit_content = true
autowrap_mode = 0

[node name="RegolithCounter" type="RichTextLabel" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "0.0"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="TonsLabel" type="RichTextLabel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
text = "Tons"
fit_content = true
